2002-02-10  Mikhael Goikhman  <migo@homemail.com>

        * ChangeLog:
	* Makefile.am:
	* FVWM/Makefile.am:
	* FVWM/create-constants:
	* FVWM/Constants.pm:
	* FVWM/Module.pm.in:
	new files added