@@ -6,8 +6,8 @@ use FVWM::Module;
 use IO::File;
 
 my $module = new FVWM::Module(
-	NAME => "FvwmPerlBasedWinList",
-	MASK => M_WINDOW_NAME | M_END_WINDOWLIST,
+	Name => "FvwmPerlBasedWinList",
+	Mask => M_WINDOW_NAME | M_END_WINDOWLIST,
 );
 my $fh = new IO::File "| xmessage -geometry 240x300 -title 'Window List' -file -";
 #my $fh = \*STDERR;
@@ -30,7 +30,7 @@ print $fh " Window id | Name\n";
 print $fh "-----------+--------------------\n";
 
 # Ask FVWM to send us its list of windows
-$module->sendInfo(0, "Send_WindowList"); 
+$module->sendText(0, "Send_WindowList"); 
 
 # Enter the main loop
 $module->eventLoop;
